@@ -1,0 +1,73 @@
+#ifndef PSANA_EXAMPLES_DUMPTIMEPIX_H
+#define PSANA_EXAMPLES_DUMPTIMEPIX_H
+
+//--------------------------------------------------------------------------
+// File and Version Information:
+// 	$Id$
+//
+// Description:
+//	Class DumpTimepix.
+//
+//------------------------------------------------------------------------
+
+//-----------------
+// C/C++ Headers --
+//-----------------
+
+//----------------------
+// Base Class Headers --
+//----------------------
+#include "psana/Module.h"
+
+//-------------------------------
+// Collaborating Class Headers --
+//-------------------------------
+
+//------------------------------------
+// Collaborating Class Declarations --
+//------------------------------------
+
+//		---------------------
+// 		-- Class Interface --
+//		---------------------
+
+namespace psana_examples {
+
+/**
+ *  @brief Example module which dumps Timepix data
+ *
+ *  This software was developed for the LCLS project.  If you use all or 
+ *  part of it, please give an appropriate acknowledgment.
+ *
+ *  @version \$Id$
+ *
+ *  @author Andy Salnikov
+ */
+
+class DumpTimepix : public Module {
+public:
+
+  // Default constructor
+  DumpTimepix (const std::string& name) ;
+
+  // Destructor
+  virtual ~DumpTimepix () ;
+
+  /// Method which is called at the beginning of the calibration cycle
+  virtual void beginCalibCycle(Event& evt, Env& env);
+  
+  /// Method which is called with event data, this is the only required 
+  /// method, all other methods are optional
+  virtual void event(Event& evt, Env& env);
+
+protected:
+
+private:
+
+  Source m_src;         // Data source set from config file
+
+};
+
+} // namespace psana_examples
+
+#endif // PSANA_EXAMPLES_DUMPTIMEPIX_H
